Stopped form overlapping

--- a/public/styles/components/_form.scss
+++ b/public/styles/components/_form.scss
@@ -32,4 +32,5 @@
 
 .c-form-input--multiline {
   min-height: 10em;
+  max-width: 100%;
 }
